crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__pho-with-mor-without-group.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "nɑ̃",
              "ja",
              "pa",
              "d",
              "anahe",
              "dɑ̃",
              "ma",
              "klas",
              "ja",
              "sɛ",
              "k",
              "anuk"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        },
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "non",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "y",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "a",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "pas",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "d",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "anaé",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "dan",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "ma",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "classe",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "cest",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "que",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "Anouk",
                  "pos": "propn"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "FLAT"
              },
              {
                "head": 1,
                "index": 3,
                "relation": "FLAT"
              },
              {
                "head": 1,
                "index": 4,
                "relation": "FLAT"
              },
              {
                "head": 2,
                "index": 5,
                "relation": "FLAT"
              },
              {
                "head": 2,
                "index": 6,
                "relation": "FLAT"
              },
              {
                "head": 2,
                "index": 7,
                "relation": "FLAT"
              },
              {
                "head": 2,
                "index": 8,
                "relation": "FLAT"
              },
              {
                "head": 1,
                "index": 9,
                "relation": "FLAT"
              },
              {
                "head": 1,
                "index": 10,
                "relation": "FLAT"
              },
              {
                "head": 1,
                "index": 11,
                "relation": "FLAT"
              },
              {
                "head": 1,
                "index": 12,
                "relation": "FLAT"
              },
              {
                "head": 1,
                "index": 13,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "non",
                  "type": "text"
                }
              ],
              "raw_text": "non",
              "span": {
                "end": 157,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "category": "omission",
                    "content": [
                      {
                        "content": "il",
                        "type": "text"
                      }
                    ],
                    "raw_text": "0il",
                    "span": {
                      "end": 164,
                      "start": 161
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "y",
                        "type": "text"
                      }
                    ],
                    "raw_text": "y",
                    "span": {
                      "end": 166,
                      "start": 165
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "a",
                        "type": "text"
                      }
                    ],
                    "raw_text": "a",
                    "span": {
                      "end": 168,
                      "start": 167
                    },
                    "type": "word"
                  }
                ]
              },
              "type": "pho_group"
            },
            {
              "content": [
                {
                  "content": "pas",
                  "type": "text"
                }
              ],
              "raw_text": "pas",
              "span": {
                "end": 175,
                "start": 172
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "d'",
                  "type": "text"
                }
              ],
              "raw_text": "d'",
              "span": {
                "end": 178,
                "start": 176
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Anaé",
                  "type": "text"
                }
              ],
              "raw_text": "Anaé",
              "span": {
                "end": 184,
                "start": 179
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "dans",
                  "type": "text"
                }
              ],
              "raw_text": "dans",
              "span": {
                "end": 189,
                "start": 185
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ma",
                  "type": "text"
                }
              ],
              "raw_text": "ma",
              "span": {
                "end": 192,
                "start": 190
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "classe",
                  "type": "text"
                }
              ],
              "raw_text": "classe",
              "span": {
                "end": 199,
                "start": 193
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": {
                      "content": [
                        {
                          "category": "omission",
                          "content": [
                            {
                              "content": "il",
                              "type": "text"
                            }
                          ],
                          "raw_text": "0il",
                          "span": {
                            "end": 207,
                            "start": 204
                          },
                          "type": "word"
                        },
                        {
                          "content": [
                            {
                              "content": "y",
                              "type": "text"
                            }
                          ],
                          "raw_text": "y",
                          "span": {
                            "end": 209,
                            "start": 208
                          },
                          "type": "word"
                        },
                        {
                          "content": [
                            {
                              "content": "a",
                              "type": "text"
                            }
                          ],
                          "raw_text": "a",
                          "span": {
                            "end": 211,
                            "start": 210
                          },
                          "type": "word"
                        }
                      ]
                    },
                    "type": "pho_group"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "retracing"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "c'est",
                  "type": "text"
                }
              ],
              "raw_text": "c'est",
              "span": {
                "end": 226,
                "start": 221
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "que",
                  "type": "text"
                }
              ],
              "raw_text": "que",
              "span": {
                "end": 230,
                "start": 227
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Anouk",
                  "type": "text"
                }
              ],
              "raw_text": "Anouk",
              "span": {
                "end": 236,
                "start": 231
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
