crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__pho-with-replacement.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "ind",
          "jav"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Ido",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Rimi",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Bety",
            "role": "Investigator",
            "speaker_code": "EXP"
          },
          {
            "name": "Praba",
            "role": "Brother",
            "speaker_code": "ABA"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "4;05.21",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "25;01.14",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Investigator",
        "sex": "female",
        "speaker": "EXP",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "5;07.22",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Brother",
        "sex": "male",
        "speaker": "ABA",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "01-JAN-1996",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "31-OCT-1994",
        "participant": "ABA",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "23-JUN-2000",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Test pho with replacement.",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "a",
              "b",
              "c",
              "d",
              "e",
              "f",
              "g"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 445,
                "start": 444
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "raw_text": "b",
              "span": {
                "end": 447,
                "start": 446
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "c",
                  "type": "text"
                }
              ],
              "raw_text": "c",
              "span": {
                "end": 449,
                "start": 448
              },
              "type": "word"
            },
            {
              "replacement": {
                "words": [
                  {
                    "content": [
                      {
                        "content": "dd",
                        "type": "text"
                      }
                    ],
                    "raw_text": "dd",
                    "span": {
                      "end": 457,
                      "start": 455
                    }
                  },
                  {
                    "content": [
                      {
                        "content": "ddd",
                        "type": "text"
                      }
                    ],
                    "raw_text": "ddd",
                    "span": {
                      "end": 461,
                      "start": 458
                    }
                  }
                ]
              },
              "type": "replaced_word",
              "word": {
                "content": [
                  {
                    "content": "d",
                    "type": "text"
                  }
                ],
                "raw_text": "d",
                "span": {
                  "end": 451,
                  "start": 450
                }
              }
            },
            {
              "content": [
                {
                  "content": "e",
                  "type": "text"
                }
              ],
              "raw_text": "e",
              "span": {
                "end": 464,
                "start": 463
              },
              "type": "word"
            },
            {
              "replacement": {
                "words": [
                  {
                    "content": [
                      {
                        "content": "ff",
                        "type": "text"
                      }
                    ],
                    "raw_text": "ff",
                    "span": {
                      "end": 472,
                      "start": 470
                    }
                  },
                  {
                    "content": [
                      {
                        "content": "fff",
                        "type": "text"
                      }
                    ],
                    "raw_text": "fff",
                    "span": {
                      "end": 476,
                      "start": 473
                    }
                  }
                ]
              },
              "type": "replaced_word",
              "word": {
                "content": [
                  {
                    "content": "f",
                    "type": "text"
                  }
                ],
                "raw_text": "f",
                "span": {
                  "end": 466,
                  "start": 465
                }
              }
            },
            {
              "content": [
                {
                  "content": "g",
                  "type": "text"
                }
              ],
              "raw_text": "g",
              "span": {
                "end": 479,
                "start": 478
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "EXP"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "ABA": {
      "birth_date": "31-OCT-1994",
      "code": "ABA",
      "id": {
        "age": "5;07.22",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Brother",
        "sex": "male",
        "speaker": "ABA"
      },
      "name": "Praba",
      "role": "Brother"
    },
    "CHI": {
      "birth_date": "01-JAN-1996",
      "code": "CHI",
      "id": {
        "age": "4;05.21",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": "Ido",
      "role": "Target_Child"
    },
    "EXP": {
      "birth_date": null,
      "code": "EXP",
      "id": {
        "age": "25;01.14",
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Investigator",
        "sex": "female",
        "speaker": "EXP"
      },
      "name": "Bety",
      "role": "Investigator"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "IDO",
        "language": "ind, jav",
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT"
      },
      "name": "Rimi",
      "role": "Mother"
    }
  }
}
