crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__phon-syllabification.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "nld"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "nld"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;00.",
        "corpus": "corpus",
        "language": [
          "nld"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "nld"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Phon project phonological syllabification and alignment tiers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: x_dependent_tier (Phon %xmodsyl, %xphosyl, %xphoaln)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Synthesized from phon-data Dutch/CLPF corpus examples",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "ˈap"
            ],
            "tier_type": "Mod"
          },
          "type": "Mod"
        },
        {
          "data": {
            "items": [
              "ˈɑp"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        },
        {
          "data": {
            "tier_type": "Modsyl",
            "words": [
              "ˈa:Np:C"
            ]
          },
          "type": "Modsyl"
        },
        {
          "data": {
            "tier_type": "Phosyl",
            "words": [
              "ˈɑ:Np:C"
            ]
          },
          "type": "Phosyl"
        },
        {
          "data": {
            "words": [
              {
                "pairs": [
                  {
                    "source": "a",
                    "target": "ɑ"
                  },
                  {
                    "source": "p",
                    "target": "p"
                  }
                ]
              }
            ]
          },
          "type": "Phoaln"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "aap",
              "content": [
                {
                  "content": "aap",
                  "type": "text"
                }
              ],
              "raw_text": "aap",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "ˈɑpəl"
            ],
            "tier_type": "Mod"
          },
          "type": "Mod"
        },
        {
          "data": {
            "items": [
              "ˈɑpow"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        },
        {
          "data": {
            "tier_type": "Modsyl",
            "words": [
              "ˈɑ:Np:Oə:Nl:C"
            ]
          },
          "type": "Modsyl"
        },
        {
          "data": {
            "tier_type": "Phosyl",
            "words": [
              "ˈɑ:Np:Oo:Nw:C"
            ]
          },
          "type": "Phosyl"
        },
        {
          "data": {
            "words": [
              {
                "pairs": [
                  {
                    "source": "ɑ",
                    "target": "ɑ"
                  },
                  {
                    "source": "p",
                    "target": "p"
                  },
                  {
                    "source": "ə",
                    "target": "o"
                  },
                  {
                    "source": "l",
                    "target": "w"
                  }
                ]
              }
            ]
          },
          "type": "Phoaln"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "appel",
              "content": [
                {
                  "content": "appel",
                  "type": "text"
                }
              ],
              "raw_text": "appel",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "bɑˈlɔn"
            ],
            "tier_type": "Mod"
          },
          "type": "Mod"
        },
        {
          "data": {
            "items": [
              "ˈplɔm"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        },
        {
          "data": {
            "tier_type": "Modsyl",
            "words": [
              "b:Oɑ:Nˈl:Oɔ:Nn:C"
            ]
          },
          "type": "Modsyl"
        },
        {
          "data": {
            "tier_type": "Phosyl",
            "words": [
              "ˈp:Ol:Oɔ:Nm:C"
            ]
          },
          "type": "Phosyl"
        },
        {
          "data": {
            "words": [
              {
                "pairs": [
                  {
                    "source": "b",
                    "target": "p"
                  },
                  {
                    "source": "ɑ",
                    "target": null
                  },
                  {
                    "source": "l",
                    "target": "l"
                  },
                  {
                    "source": "ɔ",
                    "target": "ɔ"
                  },
                  {
                    "source": "n",
                    "target": "m"
                  }
                ]
              }
            ]
          },
          "type": "Phoaln"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "ballon",
              "content": [
                {
                  "content": "ballon",
                  "type": "text"
                }
              ],
              "raw_text": "ballon",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "ˈmœts",
              "ˈja"
            ],
            "tier_type": "Mod"
          },
          "type": "Mod"
        },
        {
          "data": {
            "items": [
              "ˈmʉst",
              "ˈjɛ"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        },
        {
          "data": {
            "tier_type": "Modsyl",
            "words": [
              "ˈm:Oœ:Nt:Cs:R",
              "ˈj:Oa:N"
            ]
          },
          "type": "Modsyl"
        },
        {
          "data": {
            "tier_type": "Phosyl",
            "words": [
              "ˈm:Oʉ:Ns:Ct:C",
              "ˈj:Oɛ:N"
            ]
          },
          "type": "Phosyl"
        },
        {
          "data": {
            "words": [
              {
                "pairs": [
                  {
                    "source": "m",
                    "target": "m"
                  },
                  {
                    "source": "œ",
                    "target": "ʉ"
                  },
                  {
                    "source": "t",
                    "target": "s"
                  },
                  {
                    "source": "s",
                    "target": "t"
                  }
                ]
              },
              {
                "pairs": [
                  {
                    "source": "j",
                    "target": "j"
                  },
                  {
                    "source": "a",
                    "target": "ɛ"
                  }
                ]
              }
            ]
          },
          "type": "Phoaln"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "muts",
              "content": [
                {
                  "content": "muts",
                  "type": "text"
                }
              ],
              "raw_text": "muts",
              "type": "word"
            },
            {
              "cleaned_text": "ja",
              "content": [
                {
                  "content": "ja",
                  "type": "text"
                }
              ],
              "raw_text": "ja",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;00.",
        "corpus": "corpus",
        "language": [
          "nld"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "nld"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
